# mla-mcp

./: .gitignore  README.md  pyproject.toml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
mla_mcp/: __init__.py  __main__.py  conf.py  server.py
scripts/: client.py
tests/: test_stock.py
